--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/blanchco/be-photo-sharing#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
